added funtionality for interacting with other dataset

--- a/code/classification.ipynb
+++ b/code/classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 141,
    "metadata": {
     "collapsed": true
    },
@@ -13,19 +13,20 @@
     "import pandas as pd\n",
     "from sklearn import decomposition\n",
     "from sklearn import metrics\n",
-    "from sklearn import preprocessing"
+    "from sklearn import preprocessing\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 144,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# METADATA \n",
-    "DATASET = 0"
+    "DATASET = 1"
    ]
   },
   {
@@ -50,9 +51,9 @@
    "outputs": [],
    "source": [
     "if DATASET == 0:\n",
-    "    testfile='../data/data_set_ALL_AML_independent.csv'\n",
-    "    trainfile='../data/data_set_ALL_AML_train.csv'\n",
-    "    patient_cancer='../data/actual.csv'\n",
+    "    testfile='../data/d1/data_set_ALL_AML_independent.csv'\n",
+    "    trainfile='../data/d1/data_set_ALL_AML_train.csv'\n",
+    "    patient_cancer='../d1/data/actual.csv'\n",
     "    \n",
     "    # load csv\n",
     "    train = pd.read_csv(trainfile)\n",
@@ -90,6 +91,71 @@
     "            patient_labels.append(1)\n",
     "    train_labels = patient_labels[0:len(train)]\n",
     "    test_labels = patient_labels[len(train):]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if DATASET == 1:\n",
+    "    all_data_path ='../data/d2/data.csv'\n",
+    "    all_labels_path='../data/d2/labels.csv'\n",
+    "    \n",
+    "    # load csv\n",
+    "    all_data = pd.read_csv(all_data_path)\n",
+    "    all_labels = pd.read_csv(all_labels_path)\n",
+    "    \n",
+    "    # drop first column of all_data\n",
+    "    all_data = all_data.as_matrix()\n",
+    "    all_data = all_data[:, 1:]\n",
+    "    \n",
+    "    # drop first column of labels_data\n",
+    "    labels_dict = {'BRCA':0, 'KIRC':1, 'PRAD':2, 'LUAD':3, 'COAD':4}\n",
+    "    all_labels = all_labels.as_matrix()[:,1]\n",
+    "    all_labels_num = []\n",
+    "    for label in all_labels:\n",
+    "        all_labels_num.append(labels_dict[label])\n",
+    "        \n",
+    "    # whiten data\n",
+    "    all_data = whiten_data(all_data)\n",
+    "    \n",
+    "    # randomize indices and split into train and test\n",
+    "    indices = [i for i in range(len(all_labels_num))]\n",
+    "    random.shuffle(indices)\n",
+    "    NUM_TRAIN = 0.8*len(indices)\n",
+    "    train = all_data[indices[:NUM_TRAIN],:]\n",
+    "    train_labels = all_labels_num[indices[:NUM_TRAIN],:]\n",
+    "    test = all_data[indices[NUM_TRAIN:],:]\n",
+    "    train_labels = all_labels_num[indices[NUM_TRAIN:],:]\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n",
+      "146\n",
+      "136\n",
+      "141\n",
+      "78\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Distribution of class labels\n",
+    "print len([a for a in all_labels_num if a == 0])\n",
+    "print len([a for a in all_labels_num if a == 1])\n",
+    "print len([a for a in all_labels_num if a == 2])\n",
+    "print len([a for a in all_labels_num if a == 3])\n",
+    "print len([a for a in all_labels_num if a == 4])"
    ]
   },
   {
@@ -348,9 +414,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-114-568bcb2753fa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfsk_output\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfsk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGeneSelection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfsk_mat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m50\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mordered_fscore_columns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mf\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mfsk_output\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgene_f_vals\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# sorted list of f scores with the column they correspond to\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/ajayshekar/cs598ss/genome_correlation/code/fscore_select_k.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, Gene_exp_mat, k)\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mGene_exp_mat\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGeneExpMat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mGene_exp_mat\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mselect_k\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/ajayshekar/cs598ss/genome_correlation/code/fscore_select_k.py\u001b[0m in \u001b[0;36mmain\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     48\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m                 \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m                     \u001b[0mclass_hashmap\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mGeneExpMat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_row\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m             \u001b[0;31m#iterates over each class\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/ajayshekar/cs598ss/genome_correlation/code/fscore_select_k.py\u001b[0m in \u001b[0;36madd_row\u001b[0;34m(self, item)\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0madd_row\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrows\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m         \u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrows\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_group_submatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0moriginal_mat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "fsk_output = fsk.GeneSelection(fsk_mat,50)\n",
     "ordered_fscore_columns = [f[0] for f in fsk_output.gene_f_vals] # sorted list of f scores with the column they correspond to"
